plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cane.brothers'
version = '0.0.1'
description = 'Telegram bot acting as an AI assistant'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

springBoot {
	buildInfo()
	mainClass = 'cane.brothers.gpt.bot.App'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:1.0.0"
		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.0'
	}
}

dependencies {
	// spring boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// OpenAI
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
	// feign client
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	// telegram bot libs
	implementation 'org.telegram:telegrambots-springboot-longpolling-starter:9.0.0'
	implementation 'org.telegram:telegrambots-client:9.0.0'
	implementation 'org.telegram:telegrambots-client-jetty-adapter:9.0.0'
//	implementation 'org.telegram:telegrambots-abilities:9.0.0'
	// slf4j implementation
	implementation 'ch.qos.logback:logback-classic:1.5.18'
	// escape chars
	implementation "org.apache.commons:commons-text:1.12.0"
	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// Lombok for testing
	//testCompileOnly 'org.projectlombok:lombok:1.18.30'
	//testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

jar {
	enabled = false
}

bootJar {
	archiveFileName = "${project.name}.jar"
	layered {
		enabled = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
